--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
 
 body {
   margin-top: 150px;
-  max-width: 800px;
 }
 
 h1,
 h2,
 h3 {
-  text-align: center;
   margin: 0;
+  text-align: center;
 }
 
 h1 {
@@ -46,7 +45,7 @@ p {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
-  margin: 20px;
+
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
@@ -103,4 +102,19 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  h2 {
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+  .primary-link {
+    display: block;
+    text-align: center;
+    margin: 20px;
+  }
 }
